added loans and recommendations related files
